--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "start": "cross-env HTTPS=false NODE_OPTIONS=--openssl-legacy-provider react-scripts start",
     "build": "cross-env NODE_OPTIONS=--openssl-legacy-provider react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "json-server": "json-server --watch db.json --port 5001"
   },
   "eslintConfig": {
     "extends": [
